Fixed styling errors that made divs fall out of place

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ body {
     color: white;
     background-color: rgb(8, 49, 76);
     border: 10px solid gray;
+    min-height: 100vh;
 }
 
 #title {
@@ -26,10 +27,10 @@ body {
 
 #setup, #passing-screen {
     position: absolute;
-    background-color: rgb(0 90 117 / 95%);
-    height: 96vh;
+    background-color: rgb(0 90 117 / 98%);
+    height: 100%;
     width: 90%;
-    transform: translateX(5%) translateY(2vh);
+    transform: translateX(5%);
     border-radius: 20px;
 }  
 
